--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,6 @@ body {
     text-align: center;
 }
 
-#particles-js {
-  position: fixed;
-}
 .animate__animated.animate__backInLeft{
   --animate-duration: 2s;
 }
@@ -67,6 +64,9 @@ body {
     padding-top: 5px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 
 /* carousel */
 
@@ -76,7 +76,7 @@ body {
 }
  /* Navigation */
  nav {
-    height: 50px;
+    height: 70px;
     width: 100%;
     background-color: rgb(30, 40, 51);
     color: #eee;
@@ -85,7 +85,7 @@ body {
   nav ul {
     padding: 0;
     margin: 0;
-    text-align: left;
+    text-align: right;
   }
   nav li {
     display: inline;
@@ -96,6 +96,7 @@ body {
     width: 100px;
     text-align: center;
     text-decoration: none;
+    align-items: center;
     padding: 10px 0;
     color: rgb(141, 126, 126);
   }
@@ -116,7 +117,7 @@ body {
     content: '.';
     color: transparent;
     background: #aaa;
-    height: 1px;
+    height: 2px;
   }
   nav.fill ul li a {
     transition: all 2s;
@@ -168,6 +169,9 @@ body {
         scroll-behavior: unset;
     }
 
+    .pull-left {
+      display: none;
+    }
     .wrap{
         width:80%;
         margin: 10px auto;
@@ -212,7 +216,7 @@ body {
       text-align: left;
       width: 100%;
       text-indent: 25px;
-      font-size: 1.5rem;
+      font-size: 2rem;
       background: #333;
       border-bottom: 1px solid #555;
       color:#eee;
